# MineshaftMayhem

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
EndlessRunner/VS2015/: .gitignore  VS2015.sln
EndlessRunner/VS2015/EndlessRunner/: EndlessRunner.vcxproj  EndlessRunner.vcxproj.filters  resource.h
EndlessRunner/VS2015/x64/Debug/: EndlessRunner.ilk  Model_Untextured_PS.cso  vixen.env
EndlessRunner/Windows/: CMakeLists.txt  config.bat
EndlessRunner/Windows/MineshaftMayhem/: CMakeLists.txt
EndlessRunner/Windows/vcore/: CMakeLists.txt
EndlessRunner/Windows/vgame/: CMakeLists.txt
EndlessRunner/Windows/vgraphics/: CMakeLists.txt
EndlessRunner/assets/Emitters/: particleTest.emt
EndlessRunner/assets/Materials/: Light.vmt  Raptor.vmt  brokenRail.vmt  floor.vmt  minecart.vmt  rail.vmt  rainbow.vmt  wall.vmt  white.vmt
EndlessRunner/assets/Models/: cube.mdl  floor.mdl  gem_red.mdl  models.config  raptor.mdl
EndlessRunner/assets/Models/Data/: Wall.mtl  ZombiDog.mtl  floor.mtl
EndlessRunner/assets/Prefabs/: BrokenRail.pfb  Buffer.pfb  GemRail.pfb  PointLight.pfb  SpeedBoostRail.pfb  cube.pfb  floor.pfb  mineSection.pfb  mineSectionBothLamp.pfb  mineSectionLeftLamp.pfb  mineSectionRightLamp.pfb  rail.pfb  wall.pfb  wallLeft.pfb
EndlessRunner/assets/Scenes/: GameOver.scene  pause.scene  scene1.scene  scenes.config
EndlessRunner/assets/Scripts/: GameOver.lua  Hazard.lua  MineSection.lua  MineShaft.lua  Rail.lua  SpeedBoost.lua  camera.lua  game.lua  gem.lua  pause.lua  player.lua  raptor.lua  rotate.lua  test.lua
EndlessRunner/assets/Shaders/: Model_PS.hlsl  Model_VS.hlsl
EndlessRunner/assets/Shaders/DirectX/: BackBufferTarget_Deferred_PS.hlsl  BackBufferTarget_Deferred_VS.hlsl  Emitter_GS.hlsl  Emitter_VS.hlsl  LightPass_PS.hlsl  LightPass_VS.hlsl  Model_Inst_VS.hlsl  Model_PS.hlsl  Model_Rainbow_Deferred_PS.hlsl  Model_Rainbow_PS.hlsl  Model_Textured_Deferred_PS.hlsl  Model_Textured_PS.hlsl  Model_Untextured_Deferred_PS.hlsl  Model_Untextured_PS.hlsl  Model_VS.hlsl  Particle_GS.hlsl  Particle_PS.hlsl  Particle_VS.hlsl  PointLightPass_PS.hlsl  PointLightPass_VS.hlsl  PointLight_VS.hlsl  SpotLightPass_PS.hlsl  SpotLightPass_VS.hlsl
EndlessRunner/include/: MineshaftMayhem.h  MineshaftMayhem.h.in
EndlessRunner/source/: main.cpp
